14777
An error is incorrectly generated in this example.

Using Scala version 2.8.0.r19939-b20091130102054 (OpenJDK 64-Bit Server VM, Java 1.6.0_0)

Given A.scala, B.scala
```scala
object A {
	val x = 3
	val z: Int = B.y
}
object B {
	val y = A.x
}
```

 1. Compile
 1. Change A.scala to:
```scala
object A {
	val x = "3"
	val z: String = B.y
}
```
 1. Mark A.scala updated.
 1. An incorrect error is printed.
```scala
A.scala:3: error: type mismatch;                                   
 found   : Int                                                                       
 required: String                                                                    
        val z: String = B.y
                          ^
```
If instead both A.scala and B.scala are marked updated, no error occurs.
